# Mandlebrot

./: Bitmap.cpp  Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  CMakeCache.txt  CMakeLists.txt  Gradient.cpp  Gradient.h  Makefile  Mandlebrot  Mandlebrot.cbp  README.md  cmake_install.cmake  koordinater.txt  main.cpp
